# gpu_offload_tests

./: CMakeLists.txt  README.md
openacc/: CMakeLists.txt
openacc/arguments/: .derived_type_nested_allocatable.F90.swp  CMakeLists.txt  allocatable_arrays.F90  derived_type_allocatable.F90  derived_type_allocatable_deepcopy.F90  derived_type_nested_allocatable.F90  derived_type_nested_allocatable_deepcopy.F90  derived_type_nested_static.F90  derived_type_static.F90  static_arrays.F90
openacc/globalvars/: CMakeLists.txt  allocatable_arrays.F90  derived_type_allocatable.F90  derived_type_allocatable_deepcopy.F90  derived_type_nested_allocatable.F90  derived_type_nested_allocatable_deepcopy.F90  derived_type_nested_static.F90  derived_type_static.F90  static_arrays.F90  vars_mod.F90  vars_mod_nested.F90
